moved vscode project to main dir

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,6 @@
     "files.associations": {
         "*.ino": "cpp"
     },
-    "particle.targetDevice": "0a10aced202194944a044270",
+    "particle.targetDevice": "",
     "particle.firmwareVersion": "6.3.3"
 }
