fix repourl to target the right repo

--- a/blueprint.yaml
+++ b/blueprint.yaml
@@ -4,7 +4,7 @@ category: "Debugging & I/O"
 expertiseLevel: "Beginner"
 tags: ["Console", "Function"]
 icon: assets/serial.svg
-gitrepo: https://github.com/<your-org>/blueprint-beginner-serial-console
+gitrepo: https://github.com/particle-iot/blueprint-beginner-serial-console
 name: "Serial Console Basics"
 shortDescription: "Open a USB serial terminal and print messages via a cloud function call."
 version: 1.0.0
